# amplifier-module-hooks-ui-bridge

./: .gitignore  README.md  pyproject.toml
amplifier_module_hooks_ui_bridge/: __init__.py  bridge.py  events.py  forwarder.py  schema.py
amplifier_module_hooks_ui_bridge/adapters/: __init__.py  base.py  mock.py  queue.py  tauri.py  websocket.py
tests/: __init__.py  test_adapters.py  test_bridge.py  test_schema.py
