[project]
name = "amplifier-module-hooks-ui-bridge"
version = "0.1.0"
description = "Universal event bridge for any UI system (Textual, Tauri, Web, VS Code)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "michaeljabbour", email = "michaeljabbour@users.noreply.github.com" }
]
keywords = ["amplifier", "hooks", "ui", "tui", "tauri", "events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "amplifier-core>=0.1.0",
]

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
]

[project.entry-points."amplifier.modules"]
hooks-ui-bridge = "amplifier_module_hooks_ui_bridge:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_ui_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
